add JSonObjectRequest with working ErrorListener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">paaarWeather</string>
+    <string name="error_internet">Es gibt ein Problem. Überprüfe die Verbindung.</string>
 </resources>
